added more clear desc in learn page

--- a/templates/learn.html
+++ b/templates/learn.html
@@ -5,7 +5,7 @@
     <div class="w-3/4 mt-16 mb-16 sm:text-lg">
         <h1 class="text-3xl md:text-5xl font-[Montserrat] font-black">What Are the Big 5 Personality Traits?</h1>
         <h3 class="text-md md:text-2xl font-[Montserrat] font-semibold">
-            Openness, Conscientiousness, Extraversion, Agreeableness, and Neuroticism
+            You might be Extraverted, Serious, Responsible, Lively or Dependable
         </h3>
 
         <br>
@@ -21,8 +21,9 @@
         <br>
         <p>
             Many contemporary personality psychologists believe that there are five basic dimensions of personality,
-            often referred to as the "Big 5" personality traits. These five primary personality traits are extraversion
-            (also often spelled extroversion), agreeableness, openness, conscientiousness, and neuroticism.
+            often referred to as the "Big 5" personality traits. These five primary personality traits based on which
+            you are judged - extraversion (also often spelled extroversion), agreeableness, openness, conscientiousness,
+            and neuroticism.
 
         </p>
 
@@ -95,6 +96,54 @@
             Neuroticism is a personality trait characterized by sadness, moodiness, and emotional instability.
             Individuals who are high in neuroticism tend to experience mood swings, anxiety, irritability, and sadness.
             Those low in this personality trait tend to be more stable and emotionally resilient.
+        </p>
+
+        <h1 class="text-3xl md:text-5xl font-[Montserrat] font-black mt-8" id="results">Reading the Results</h1>
+
+        <br>
+        <p>
+            If your result is <b>Extraverted</b>, it means that you are outgoing and
+            energetic. You enjoy being around people and tend to be the life of the party. You may also be assertive and
+            confident in social situations.
+        </p>
+
+        <br>
+        <p>
+            If your result is <b>Serious</b>, it means that you take your commitments
+            seriously and are likely to be a hard worker. You are realistically aware of your own capabilities, but
+            are also aware of your own limitations; you are not tempted by vanity or self-importance.
+        </p>
+
+        <br>
+        <p>
+            If your result is <b>Responsible</b>, it means that you can be counted on
+            to follow through on your commitments and take care of responsibilities. You may also be organized and
+            efficient in your work. Being responsible means being dependable, keeping promises and honoring the
+            commitments. You accept the consequences for what you say and do.
+        </p>
+
+        <br>
+        <p>
+            If your result is <b>Lively</b>, it means that you are energetic and enthusiastic. You enjoy being active
+            and may
+            be full of ideas and energy. You may also be spontaneous and enjoy trying new things.
+        </p>
+
+        <br>
+        <p>
+            If your result is <b>Dependable</b>, it means that you are reliable and trustworthy. You can also be counted
+            on
+            to follow through on your commitments and take care of responsibilities. You may also be organized and
+            efficient in your work. A dependable person is someone who gives reliable service and is loyal and stable.
+            The dependable person is someone you can count on in the workplace, at home, or even in the greater
+            management field of governance and politics.
+        </p>
+
+        <br>
+        <p>
+            No matter what your result on the Big 5 Personality Prediction Test is, remember that personality is not
+            fixed and can change over time. It's important to embrace your unique traits and use them to your advantage
+            in life and work.
         </p>
 
         <a href="\#test" type="submit"
