--- a/templates/result.html
+++ b/templates/result.html
@@ -45,9 +45,14 @@
                 <p class="text-lg font-[Montserrat] text-white">Your Personality is</p>
                 <p class="text-3xl sm:text-7xl font-[Montserrat] text-white uppercase font-black">{{per}}</p>
 
-                <a href="\#test" type="submit"
+                <a href="\" type="submit"
                     class="my-5 shadow-xl bg-blue-400 hover:bg-blue-300 text-white font-bold py-2 px-4 border-b-4 border-blue-500 hover:border-blue-400 rounded">
                     Retake Test
+                </a>
+
+                <a href="\learn#results" type="submit"
+                    class="shadow-xl bg-blue-400 hover:bg-blue-300 text-white font-bold py-2 px-4 border-b-4 border-blue-500 hover:border-blue-400 rounded">
+                    What Does This Mean?
                 </a>
 
                 <img src=" {{url_for('static', filename='assets/footer-desktop.png')}}"
