--- a/templates/working.html
+++ b/templates/working.html
@@ -39,6 +39,12 @@
             manager can either “Grant” or “Reject” the loan for a person.
         </p>
 
+        <br>
+        <p>
+            <b>Image Assets</b> <br>
+            The Images used in this website are taken from 16personalities, another popular personality prediction site.
+        </p>
+
 
 
         <a href="\#test" type="submit"
